--- a/admin.html
+++ b/admin.html
@@ -6,44 +6,22 @@
     <title>Panel Administrativo - SEDIF</title>
     <style>
         :root { --primary: #7b7bb5; --secondary: #4a90e2; --bg: #f0f2f5; --text: #2c3e50; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--bg); margin: 0; color: var(--text); overflow-x: hidden; }
-
-        /* Login - Pantalla Bloqueante Sólida */
-        #login-screen { 
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: linear-gradient(135deg, var(--primary), var(--secondary)); 
-            display: flex; align-items: center; justify-content: center; z-index: 10000; 
-        }
+        body { font-family: 'Segoe UI', sans-serif; background: var(--bg); margin: 0; color: var(--text); overflow: hidden; }
+        #login-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, var(--primary), var(--secondary)); display: flex; align-items: center; justify-content: center; z-index: 10000; }
         .login-card { background: white; padding: 40px; border-radius: 16px; box-shadow: 0 15px 35px rgba(0,0,0,0.2); width: 90%; max-width: 350px; text-align: center; }
-
-        /* Estructura del Panel */
-        #admin-panel { display: none; min-height: 100vh; width: 100%; }
-        .sidebar { 
-            width: 260px; background: white; height: 100vh; padding: 30px 20px; 
-            position: fixed; border-right: 1px solid #e1e8f0; display: flex; 
-            flex-direction: column; box-sizing: border-box; z-index: 100;
-        }
-        .main-content { margin-left: 260px; padding: 40px; width: calc(100% - 260px); box-sizing: border-box; }
-
+        #admin-panel { display: none; min-height: 100vh; width: 100%; display: flex; }
+        .sidebar { width: 260px; background: white; height: 100vh; padding: 30px 20px; position: fixed; border-right: 1px solid #e1e8f0; display: flex; flex-direction: column; box-sizing: border-box; z-index: 100; }
+        .main-content { margin-left: 260px; padding: 40px; width: calc(100% - 260px); box-sizing: border-box; overflow-y: auto; height: 100vh; }
         .user-box { padding-bottom: 20px; margin-bottom: 20px; border-bottom: 1px solid #eee; }
-        .user-box h3 { margin: 0; color: var(--primary); font-size: 1.1em; }
-
         .nav-btn { padding: 12px 15px; border-radius: 8px; margin-bottom: 8px; cursor: pointer; transition: 0.3s; font-weight: 500; color: #555; display: flex; align-items: center; gap: 10px; }
-        .nav-btn:hover { background: #f0f2f5; color: var(--primary); }
         .nav-btn.active { background: var(--primary); color: white; }
-
-        /* Secciones y Tablas */
-        .content-section { display: none; }
-        .content-section.active { display: block; }
         .table-card { background: white; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); overflow: hidden; margin-top: 20px; }
         table { width: 100%; border-collapse: collapse; }
         th { background: #fafbfc; color: #8898aa; font-size: 0.75em; text-transform: uppercase; padding: 15px 20px; text-align: left; }
         td { padding: 15px 20px; border-bottom: 1px solid #f0f2f5; font-size: 0.9em; }
-
-        .btn-status { padding: 6px 12px; border-radius: 20px; border: none; font-size: 0.75em; font-weight: bold; }
-        .status-activo { background: #e6fcf5; color: #0ca678; }
-        .status-inactivo { background: #fff5f5; color: #fa5252; }
-        
+        .status-pill { padding: 4px 12px; border-radius: 20px; font-weight: bold; font-size: 0.7em; }
+        .activo { background: #e6fcf5; color: #0ca678; }
+        .inactivo { background: #fff5f5; color: #fa5252; }
         input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
         .btn-login { background: var(--primary); color: white; border: none; padding: 14px; border-radius: 8px; width: 100%; cursor: pointer; font-weight: bold; }
     </style>
@@ -52,11 +30,11 @@
 
     <div id="login-screen">
         <div class="login-card">
-            <h2 style="color: var(--primary); margin-top: 0;">Panel Administrativo</h2>
+            <h2 style="color: var(--primary);">Panel Administrativo</h2>
             <input type="email" id="email" placeholder="Correo electrónico">
             <input type="password" id="pass" placeholder="Contraseña">
             <button class="btn-login" onclick="ejecutarLogin()">ENTRAR</button>
-            <p id="error-msg" style="color: #fa5252; font-size: 0.85em; display: none; margin-top: 15px;">Datos incorrectos.</p>
+            <p id="error-msg" style="color:red; display:none; margin-top:10px;">Acceso denegado</p>
         </div>
     </div>
 
@@ -64,11 +42,11 @@
         <div class="sidebar">
             <div class="user-box">
                 <h3 id="user-display">Usuario</h3>
-                <span id="role-display" style="font-size: 0.8em; color: gray;">Rol</span>
+                <span id="role-display" style="font-size:0.8em; color:gray;">Rol</span>
             </div>
             <div id="tab-inscritos" class="nav-btn active" onclick="cambiarSeccion('inscritos')">📊 Inscritos Totales</div>
             <div id="tab-catalogos" class="nav-btn" onclick="cambiarSeccion('catalogos')">🏫 Gestión de Talleres</div>
-            <div class="nav-btn" onclick="location.reload()" style="margin-top: auto; color: #fa5252;">🚪 Salir</div>
+            <div class="nav-btn" onclick="location.reload()" style="margin-top:auto; color:red;">🚪 Salir</div>
         </div>
 
         <div class="main-content">
@@ -81,8 +59,7 @@
                     </table>
                 </div>
             </div>
-
-            <div id="sec-catalogos" class="content-section">
+            <div id="sec-catalogos" class="content-section" style="display:none;">
                 <h1>Configuración de Talleres</h1>
                 <div class="table-card">
                     <table>
@@ -118,16 +95,16 @@
         }
 
         function cambiarSeccion(sec) {
-            document.querySelectorAll('.content-section').forEach(s => s.classList.remove('active'));
-            document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
-            document.getElementById('sec-' + sec).classList.add('active');
-            document.getElementById('tab-' + sec).classList.add('active');
-            if(sec === 'catalogos') obtenerDatosCatalogos();
+            document.getElementById('sec-inscritos').style.display = sec === 'inscritos' ? 'block' : 'none';
+            document.getElementById('sec-catalogos').style.display = sec === 'catalogos' ? 'block' : 'none';
+            document.getElementById('tab-inscritos').classList.toggle('active', sec === 'inscritos');
+            document.getElementById('tab-catalogos').classList.toggle('active', sec === 'catalogos');
+            if(sec === 'catalogos') cargarCatalogos();
         }
 
         async function cargarInscritos() {
             const tbody = document.getElementById('body-inscritos');
-            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando...</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;">Cargando...</td></tr>';
             try {
                 const res = await fetch(`${WEBHOOK_URL}?accion=admin_listar_inscritos`);
                 const data = await res.json();
@@ -138,45 +115,47 @@
                         tbody.innerHTML += `<tr><td><strong>${v[0]}</strong></td><td>${v[3]} ${v[4]}</td><td>${v[7]}</td><td>${v[8]}</td></tr>`;
                     }
                 });
-            } catch (e) { tbody.innerHTML = '<tr><td colspan="4">Error al cargar datos.</td></tr>'; }
+            } catch (e) { console.error(e); }
         }
 
-        async function obtenerDatosCatalogos() {
+        async function cargarCatalogos() {
             const tbody = document.getElementById('body-catalogos');
-            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando catálogo...</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;">Cargando...</td></tr>';
             try {
                 const res = await fetch(`${WEBHOOK_URL}?accion=listar`);
                 const data = await res.json();
                 tbody.innerHTML = '';
                 data.forEach((item, index) => {
                     const v = Object.values(item);
-                    // Lógica robusta: v[0]=ID, v[1]=Nombre, v[2]=Estatus
-                    const id = v[0] || '---';
-                    const nombre = v[1] || 'Sin nombre';
-                    const estatusRaw = String(v[2] || '').toUpperCase();
-                    const estatus = estatusRaw === 'ACTIVO' ? 'ACTIVO' : 'INACTIVO';
+                    // Mapeo forzado según tu descripción: A=ID, B=Nombre, C=Estatus
+                    const id = v[0];
+                    const nombre = v[1];
+                    const estatus = (String(v[2] || '').toUpperCase() === 'ACTIVO') ? 'ACTIVO' : 'INACTIVO';
                     
                     tbody.innerHTML += `
                         <tr>
                             <td>${id}</td>
                             <td>${nombre}</td>
-                            <td><span class="btn-status ${estatus === 'ACTIVO' ? 'status-activo' : 'status-inactivo'}">${estatus}</span></td>
-                            <td><button onclick="actualizarEstatus(${index + 2}, '${estatus}')" style="background:#eee; border:1px solid #ccc; cursor:pointer; padding:5px 10px; border-radius:5px;">Alternar</button></td>
+                            <td><span class="status-pill ${estatus === 'ACTIVO' ? 'activo' : 'inactivo'}">${estatus}</span></td>
+                            <td><button onclick="actualizarEstatus(${index + 2}, '${estatus}')" style="cursor:pointer;">Alternar</button></td>
                         </tr>`;
                 });
-            } catch (e) { tbody.innerHTML = '<tr><td colspan="4">Error al cargar catálogo.</td></tr>'; }
+            } catch (e) { console.error(e); }
         }
 
         async function actualizarEstatus(fila, estatusActual) {
             const nuevo = estatusActual === 'ACTIVO' ? 'INACTIVO' : 'ACTIVO';
             try {
-                await fetch(WEBHOOK_URL, {
+                const res = await fetch(WEBHOOK_URL, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ accion: 'admin_actualizar_catalogo', fila: fila, estatus: nuevo })
                 });
-                obtenerDatosCatalogos(); // Refresca la tabla
-            } catch (e) { alert("Error al actualizar"); }
+                if(res.ok) {
+                    alert("¡Cambiado a " + nuevo + "!");
+                    cargarCatalogos();
+                }
+            } catch (e) { alert("Error al conectar"); }
         }
     </script>
 </body>
