--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
         :root { --primary: #7b7bb5; --secondary: #4a90e2; --bg: #f0f2f5; --text: #2c3e50; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bg); margin: 0; color: var(--text); overflow: hidden; }
         #login-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, var(--primary), var(--secondary)); display: flex; align-items: center; justify-content: center; z-index: 10000; }
-        .login-card { background: white; padding: 40px; border-radius: 16px; box-shadow: 0 15px 35px rgba(0,0,0,0.2); width: 90%; max-width: 350px; text-align: center; }
+        .login-card { background: white; padding: 40px; border-radius: 16px; box-shadow: 0 15px 35px rgba(0,0,0,0.3); width: 90%; max-width: 350px; text-align: center; }
         #admin-panel { display: none; min-height: 100vh; width: 100%; display: flex; }
         .sidebar { width: 260px; background: white; height: 100vh; padding: 30px 20px; position: fixed; border-right: 1px solid #e1e8f0; display: flex; flex-direction: column; box-sizing: border-box; z-index: 100; }
         .main-content { margin-left: 260px; padding: 40px; width: calc(100% - 260px); box-sizing: border-box; overflow-y: auto; height: 100vh; }
@@ -22,6 +22,7 @@
         .status-pill { padding: 4px 12px; border-radius: 20px; font-weight: bold; font-size: 0.7em; }
         .activo { background: #e6fcf5; color: #0ca678; }
         .inactivo { background: #fff5f5; color: #fa5252; }
+        .btn-toggle { background: #eee; border: 1px solid #ccc; cursor: pointer; padding: 5px 10px; border-radius: 6px; font-weight: bold; }
         input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
         .btn-login { background: var(--primary); color: white; border: none; padding: 14px; border-radius: 8px; width: 100%; cursor: pointer; font-weight: bold; }
     </style>
@@ -30,7 +31,7 @@
 
     <div id="login-screen">
         <div class="login-card">
-            <h2 style="color: var(--primary);">Panel Administrativo</h2>
+            <h2 style="color: var(--primary);">Acceso Administrativo</h2>
             <input type="email" id="email" placeholder="Correo electrónico">
             <input type="password" id="pass" placeholder="Contraseña">
             <button class="btn-login" onclick="ejecutarLogin()">ENTRAR</button>
@@ -60,7 +61,7 @@
                 </div>
             </div>
             <div id="sec-catalogos" class="content-section" style="display:none;">
-                <h1>Configuración de Talleres</h1>
+                <h1>Gestión de Talleres</h1>
                 <div class="table-card">
                     <table>
                         <thead><tr><th>ID</th><th>Nombre del Taller</th><th>Estatus</th><th>Acción</th></tr></thead>
@@ -99,12 +100,12 @@
             document.getElementById('sec-catalogos').style.display = sec === 'catalogos' ? 'block' : 'none';
             document.getElementById('tab-inscritos').classList.toggle('active', sec === 'inscritos');
             document.getElementById('tab-catalogos').classList.toggle('active', sec === 'catalogos');
-            if(sec === 'catalogos') cargarCatalogos();
+            if(sec === 'catalogos') obtenerDatosCatalogos();
         }
 
         async function cargarInscritos() {
             const tbody = document.getElementById('body-inscritos');
-            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;">Cargando...</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando...</td></tr>';
             try {
                 const res = await fetch(`${WEBHOOK_URL}?accion=admin_listar_inscritos`);
                 const data = await res.json();
@@ -118,18 +119,18 @@
             } catch (e) { console.error(e); }
         }
 
-        async function cargarCatalogos() {
+        async function obtenerDatosCatalogos() {
             const tbody = document.getElementById('body-catalogos');
-            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;">Cargando...</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center; padding:20px;">Cargando...</td></tr>';
             try {
                 const res = await fetch(`${WEBHOOK_URL}?accion=listar`);
                 const data = await res.json();
                 tbody.innerHTML = '';
                 data.forEach((item, index) => {
                     const v = Object.values(item);
-                    // Mapeo forzado según tu descripción: A=ID, B=Nombre, C=Estatus
-                    const id = v[0];
-                    const nombre = v[1];
+                    // Mapeo: 0=ID, 1=Nombre, 2=Estatus
+                    const id = v[0] || '---';
+                    const nombre = v[1] || 'Sin nombre';
                     const estatus = (String(v[2] || '').toUpperCase() === 'ACTIVO') ? 'ACTIVO' : 'INACTIVO';
                     
                     tbody.innerHTML += `
@@ -137,7 +138,7 @@
                             <td>${id}</td>
                             <td>${nombre}</td>
                             <td><span class="status-pill ${estatus === 'ACTIVO' ? 'activo' : 'inactivo'}">${estatus}</span></td>
-                            <td><button onclick="actualizarEstatus(${index + 2}, '${estatus}')" style="cursor:pointer;">Alternar</button></td>
+                            <td><button onclick="actualizarEstatus(${index + 2}, '${estatus}')" class="btn-toggle">Alternar</button></td>
                         </tr>`;
                 });
             } catch (e) { console.error(e); }
@@ -145,16 +146,14 @@
 
         async function actualizarEstatus(fila, estatusActual) {
             const nuevo = estatusActual === 'ACTIVO' ? 'INACTIVO' : 'ACTIVO';
+            if(!confirm("¿Cambiar a " + nuevo + "?")) return;
             try {
-                const res = await fetch(WEBHOOK_URL, {
+                await fetch(`${WEBHOOK_URL}?accion=admin_actualizar_catalogo`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ accion: 'admin_actualizar_catalogo', fila: fila, estatus: nuevo })
+                    body: JSON.stringify({ fila: fila, estatus: nuevo })
                 });
-                if(res.ok) {
-                    alert("¡Cambiado a " + nuevo + "!");
-                    cargarCatalogos();
-                }
+                obtenerDatosCatalogos();
             } catch (e) { alert("Error al conectar"); }
         }
     </script>
